apps/text2shop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: text2shop
  labels:
    app.kubernetes.io/part-of: text2shop
    platform.mousses.xyz/admission: audit
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
